fixes height gap due to removed buttons

--- a/examples/inspector/style/style.css
+++ b/examples/inspector/style/style.css
@@ -123,7 +123,7 @@ body.simple #xstats {
   display: none;
   position: absolute;
   top: 32px;
-  bottom: 32px;
+  bottom: 0;
   right: 0;
   width: 500px;
   overflow-y: auto;
@@ -231,7 +231,7 @@ body.simple #xstats {
 #stageContainer {
   position: absolute;
   top: 133px;
-  bottom: 32px;
+  bottom: 0;
   left: 0;
   right: 500px;
   overflow: auto;
